# sapphire

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  TODO.md  diseno.mdown  ejemplos.NombreDelLenguajeAbreviado  ejemplos.spcl  package.yaml  result.txt  sapphire.cabal
app/: Main.hs
codigo/: Checker.hs  Language.hs  Lexer.hs  Lexer.x  Main  Main.hs  Parser.y  SymTable.hs  SymbolTable.hs  TablaSim.hs  info.txt  makefile
config/: platforms.json
doc/: correcciones.md  design.md  diseno.md  diseño.md  preguntas.md  requirements.md  requisitos.md  ruby.md
documentacion/: diseno.md  diseno.mdown  grammar.txt  ruby.md
ejemplos/: binarysearch.sc  ejemplos.rb  ejemplos.sc  ejemplos.spcl  holamundo.sc  quicksort.sc
ejemplos/ruby/: binarySearch.rb  ejemplos.rb
ejemplos/sapphire/: ejemplo.sp  expresion.sp  if.sp  record.sp
ejemplos/supercool/: binarysearch.sc  ejemplos.sc  quicksort.sc  toFloat.sc
examples/: array.sp  backslash.sp  binarysearch.sp  case.sp  crazy.sp  ejemplo.sp  fact.sp  func.sp  funcDef.sp  if.sp  infunc.sp  inside.sp  intensidad.sp  loop.sp  multiline.sp  offset.sp  record.sp  stringerror.sp  unionsrecord.sp
examples/errors/: parse.sp
examples/final/: ackermann.sp  factit.sp  factrec.sp  hanoi.sp
examples/main/: record.sp
examples/mips/: func.sp  helloworld.sp  if.sp
safiro/: .gitignore  README.md  safiro.cabal
src/: Access.hs  Checker.hs  IndentedShow.hs  Language.hs  Lexer.x  Lib.hs  Parser.y  Parser.y.orig  PrettyShow.hs  Sapphire.hs  SymbolTable.hs  makefile
test/: LexerSpec.hs  ParserSpec.hs  Spec.hs
(+168 files in other folders)
