name         : sapphire
version      : 0.1.0.0
synopsis     : Sapphire programming language compiler
-- A longer description of the package.
-- description:
license      : BSD3
license-file : LICENSE
author       : Matteo Ferrando, Germán León
maintainer   : matteo.ferrando2@gmail.com
-- A copyright notice.
-- copyright:
category     : Language
build-type   : Simple
cabal-version: >= 1.10
-- Extra files to be distributed with the package, such as examples or a README.
-- extra-source-files:

executable sapphire
  hs-source-dirs  : src
  main-is         : Language/Sapphire/Main.hs
  default-language: Haskell2010

  ghc-options:
      -Wall

  -- Modules included in this executable, other than Main.
  other-modules: Language.Sapphire.Lexer, Language.Sapphire.Parser

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:
      DeriveTraversable
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , NamedFieldPuns
    , TypeSynonymInstances

  -- Other library packages from which modules are imported.
  build-depends:
      base         >= 4.7     && < 4.8
    , containers   >= 0.5     && < 0.6
    , filepath     >= 1.3     && < 1.4
    , process      >= 1.2     && < 1.3
    , transformers >= 0.3     && < 0.4
    , mtl          >= 2.1.3.1 && < 2.2
    , array        >= 0.5     && < 0.6
    , split        >= 0.2.2   && < 0.2.3

  build-tools: alex, happy
